k8s/base/deployment-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-new
  namespace: default
  labels:
    k8s-app: consumer-new
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: consumer-new
  template:
    metadata:
      labels:
        k8s-app: consumer-new
    #      annotations:
    #        k8s.aliyun.com/eci-use-specs: "1-2Gi"
    spec:
      containers:
        - name: consumer-new
          image: REGISTRY/NAMESPACE/IMAGE:TAG
          imagePullPolicy: Always
          ports:
            - name: consumer-port
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "0.25"
              memory: "0.5Gi"
            limits:
              cpu: "0.25"
              memory: "0.5Gi"
