k8s/base/business.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business
  namespace: default
  labels:
    k8s-app: business
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: business
  template:
    metadata:
      labels:
        k8s-app: business
    spec:
      containers:
        - name: business
          image: registry-vpc.cn-shenzhen.aliyuncs.com/org-ypq/business:0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9770
              protocol: TCP
          resources:
            requests:
              cpu: "0.25"
              memory: "0.5Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-spec: "slb.s1.small"
  name: business-service
  namespace: default
  labels:
    k8s-app: business-service
spec:
  type: LoadBalancer
  #  可选NodePort,下面也能指定nodePort=30000~32676
  #  type: NodePort
  ports:
    - port: 9770
      targetPort: 9770
#      nodePort: 30000
      name: business
  selector:
    k8s-app: business
