k8s/base/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: default
  labels:
    k8s-app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: order
  template:
    metadata:
      labels:
        k8s-app: order
    spec:
      containers:
        - name: order
          image: registry-vpc.cn-shenzhen.aliyuncs.com/org-ypq/order:0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9772
              protocol: TCP
          resources:
            requests:
              cpu: "0.5"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
  labels:
    k8s-app: order-service
spec:
  type: ClusterIP
  #  可选NodePort,下面也能指定nodePort=30000~32676
  #  type: NodePort
  ports:
    - port: 9772
      targetPort: 9772
      #      nodePort: 30000
      name: order
  selector:
    k8s-app: order
