k8s/base/seata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seata-server
  namespace: default
  labels:
    k8s-app: seata-server
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: seata-server
  template:
    metadata:
      labels:
        k8s-app: seata-server
    spec:
      containers:
        - name: seata-server
          image: registry-vpc.cn-shenzhen.aliyuncs.com/org-ypq/seata-offical:1.4.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8091
              protocol: TCP
          resources:
            requests:
              cpu: "0.25"
              memory: "0.5Gi"
            limits:
              cpu: "0.5"
              memory: "1Gi"
          volumeMounts:
            - name: seata-config
              mountPath: /root/seata-config
      volumes:
        - name: seata-config
          configMap:
            name: seata-server-config

---
apiVersion: v1
kind: Service
metadata:
  name: seata-server
  namespace: default
  labels:
    k8s-app: seata-server
spec:
  type: ClusterIP
  #  可选NodePort,下面也能指定nodePort=30000~32676
  #  type: NodePort
  ports:
    - port: 8091
      targetPort: 8091
      #      nodePort: 30000
      name: seata-server
  selector:
    k8s-app: seata-server
