k8s/base/service-provider.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider-new
  namespace: default
  labels:
    k8s-app: provider-new
spec:
  type: ClusterIP
#  可选NodePort,下面也能指定nodePort=30000~32676
#  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
#      nodePort: 30000
      name: provider-service-new
  selector:
    k8s-app: provider-new
