k8s/base/ingress-consumer.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: consumer-gray-ingress
spec:
  rules:
    - host: ypq.org
      http:
        paths:
          - path: /
            backend:
              serviceName: consumer
              servicePort: 8080
